--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+body {
+	font-family: Roboto;
+	background-image: url('./img/fondo.jpg');
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	background-position-y: 0px;
+}
+
 .App {
 	text-align: center;
 }
